[gd_scene load_steps=15 format=3 uid="uid://b0042tftptya8"]

[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="1_b6pnb"]
[ext_resource type="Script" path="res://Scene/exercice_2/watchman_2.gd" id="2_y1xtn"]
[ext_resource type="Texture2D" uid="uid://xphlonj4yjpe" path="res://icon.svg" id="3_oeg3u"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_v7ixe"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="5_pq3lg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_g2kxq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_xon2a"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_bjvys"]
[ext_resource type="Script" path="res://Scene/exercice_2/Enemy_2.gd" id="9_242s4"]
[ext_resource type="Script" path="res://addons/godot_state_charts/expression_guard.gd" id="9_d6jwq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j503b"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1bb4s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gbwb7"]
radius = 105.119

[sub_resource type="Resource" id="Resource_c2jh1"]
script = ExtResource("9_d6jwq")
expression = "enemy_entered_count > 2"

[node name="CoumpondState" type="Node2D"]

[node name="StateChartDebugger" parent="." instance=ExtResource("1_b6pnb")]
offset_left = 771.0
offset_right = 1149.0
offset_bottom = 649.0
initial_node_to_watch = NodePath("../Watchman/StateChart")

[node name="Watchman" type="Node2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_j503b")
position = Vector2(445, 297)
rotation = -1.5708
scale = Vector2(1.74449, 1.74449)
script = ExtResource("2_y1xtn")

[node name="Icon" type="Sprite2D" parent="Watchman"]
material = SubResource("CanvasItemMaterial_1bb4s")
rotation = 1.5708
texture = ExtResource("3_oeg3u")

[node name="Area2D" type="Area2D" parent="Watchman"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Watchman/Area2D"]
shape = SubResource("CircleShape2D_gbwb7")

[node name="StateChart" type="Node" parent="Watchman"]
script = ExtResource("4_v7ixe")

[node name="Root" type="Node" parent="Watchman/StateChart"]
script = ExtResource("5_pq3lg")

[node name="AlertState" type="Node" parent="Watchman/StateChart/Root"]
script = ExtResource("6_g2kxq")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Watchman/StateChart/Root/AlertState"]
script = ExtResource("7_xon2a")

[node name="To Observing" type="Node" parent="Watchman/StateChart/Root/AlertState/Idle"]
script = ExtResource("8_bjvys")
to = NodePath("../../Observing")
event = &"enemy_entered"

[node name="Observing" type="Node" parent="Watchman/StateChart/Root/AlertState"]
script = ExtResource("7_xon2a")

[node name="To_Idle" type="Node" parent="Watchman/StateChart/Root/AlertState/Observing"]
script = ExtResource("8_bjvys")
to = NodePath("../../Idle")
event = &"enemy_exited"
delay_seconds = 1.0

[node name="BerserkMode" type="Node" parent="Watchman/StateChart/Root"]
script = ExtResource("6_g2kxq")
initial_state = NodePath("Normal")

[node name="Normal" type="Node" parent="Watchman/StateChart/Root/BerserkMode"]
script = ExtResource("7_xon2a")

[node name="To Berserk" type="Node" parent="Watchman/StateChart/Root/BerserkMode/Normal"]
script = ExtResource("8_bjvys")
to = NodePath("../../Berserk")
event = &"enemy_entered"
guard = SubResource("Resource_c2jh1")

[node name="Berserk" type="Node" parent="Watchman/StateChart/Root/BerserkMode"]
script = ExtResource("7_xon2a")

[node name="To Normal" type="Node" parent="Watchman/StateChart/Root/BerserkMode/Berserk"]
script = ExtResource("8_bjvys")
to = NodePath("../../Normal")
delay_seconds = 3.0

[node name="Enemy" type="Node2D" parent="."]
scale = Vector2(0.425025, 0.425025)
script = ExtResource("9_242s4")

[node name="Icon" type="Sprite2D" parent="Enemy"]
texture = ExtResource("3_oeg3u")

[node name="Area2D" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D"]
shape = SubResource("CircleShape2D_gbwb7")

[connection signal="area_entered" from="Watchman/Area2D" to="Watchman" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Watchman/Area2D" to="Watchman" method="_on_area_2d_area_exited"]
[connection signal="state_entered" from="Watchman/StateChart/Root/AlertState/Idle" to="Watchman" method="_on_idle_state_entered"]
[connection signal="state_processing" from="Watchman/StateChart/Root/AlertState/Observing" to="Watchman" method="_on_observing_state_processing"]
[connection signal="state_entered" from="Watchman/StateChart/Root/BerserkMode" to="Watchman" method="_on_berserk_mode_state_entered"]
[connection signal="state_processing" from="Watchman/StateChart/Root/BerserkMode" to="Watchman" method="_on_berserk_mode_state_processing"]
[connection signal="state_entered" from="Watchman/StateChart/Root/BerserkMode/Normal" to="Watchman" method="_on_normal_state_entered"]
[connection signal="state_entered" from="Watchman/StateChart/Root/BerserkMode/Berserk" to="Watchman" method="_on_berserk_state_entered"]
